# vibe-coding

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: vibe-architect.md  vibe-code-reviewer.md  vibe-overseer.md  vibe-security-auditor.md  vibe-test-designer.md
commands/: vibe.md
examples/: examples-prompts.md
examples/mdtoc/: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/mdtoc/.claude/vibe-reports/: latest
examples/mdtoc/.claude/vibe-reports/2026-07-12T22-36-21Z/: spec.md  state.json  summary.md
examples/mdtoc/.claude/vibe-reports/2026-07-12T22-43-14Z/: decisions.md  design.md  state.json  summary.md
examples/mdtoc/.claude/vibe-reports/2026-07-12T23-14-01Z/: build-log.md  checklist.md  plan.md  state.json  summary.md  verification-plan.md
examples/mdtoc/.claude/vibe-reports/2026-07-13T00-06-44Z/: findings.json  state.json  summary.md  verify-report.md
examples/mdtoc/.claude/vibe-reports/2026-07-13T01-10-44Z/: findings.json  review.md  state.json  summary.md
examples/mdtoc/.claude/vibe-reports/2026-07-13T01-17-36Z/: env-report.md  state.json  summary.md
examples/mdtoc/.claude/vibe-reports/2026-07-15T00-33-48Z/: env-report.md  state.json  summary.md
examples/mdtoc/.github/workflows/: ci.yml
examples/mdtoc/data/: crlf.md  duplicate_headings.md  markers_in_fence.md  section_underscore.md  simple.expected.md  simple.md  unterminated_fence.md
examples/mdtoc/src/mdtoc/: __init__.py  __main__.py  cli.py  document.py  headings.py  slug.py
examples/mdtoc/tests/: conftest.py
examples/mdtoc/tests/mdtoc/: test_cli.py  test_document.py  test_headings.py  test_render_idempotence.py  test_slug.py
examples/rebackoff/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
examples/rebackoff/src/rebackoff/: __init__.py  backoff.py  decorators.py  errors.py  policy.py  retrying.py
examples/rebackoff/tests/: conftest.py  test_backoff.py  test_decorator_async.py  test_decorator_sync.py  test_errors.py  test_no_deps.py  test_policy.py  test_public_api.py  test_retrying_async.py  test_retrying_sync.py
examples/shorturl/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
examples/shorturl/.claude/vibe-reports/: latest
examples/shorturl/.claude/vibe-reports/2026-07-14T16-27-26Z/: spec.md  state.json  summary.md
examples/shorturl/.claude/vibe-reports/2026-07-14T16-55-12Z/: decisions.md  design.md  state.json  summary.md
examples/shorturl/.claude/vibe-reports/2026-07-14T17-04-58Z/: build-log.md  checklist.md  plan.md  state.json  summary.md  verification-plan.md
examples/shorturl/.claude/vibe-reports/2026-07-14T18-33-33Z/: findings.json  state.json  summary.md  verify-report.md
examples/shorturl/.claude/vibe-reports/2026-07-14T18-48-15Z/: findings.json  state.json  summary.md  verify-report.md
examples/shorturl/.claude/vibe-reports/2026-07-14T18-52-16Z/: findings.json  review.md  state.json  summary.md
examples/shorturl/.claude/vibe-reports/2026-07-14T23-09-27Z/: findings.json  state.json  summary.md  verify-report.md
examples/shorturl/.claude/vibe-reports/2026-07-14T23-12-17Z/: findings.json  review.md  state.json  summary.md
examples/shorturl/.claude/vibe-reports/2026-07-14T23-16-07Z/: env-report.md  state.json  summary.md
examples/shorturl/.claude/vibe-reports/2026-07-14T23-48-05Z/: findings.json  state.json  summary.md  verify-report.md
examples/shorturl/src/shorturl/: __init__.py  api.py  cli.py  codes.py  config.py  db.py
examples/shorturl/tests/: test_auth.py  test_cli.py  test_codes.py  test_config.py  test_create.py  test_db.py  test_redirect.py  test_serve.py  test_stats.py
examples/upsafe/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
examples/upsafe/.claude/vibe-reports/: latest
examples/upsafe/.claude/vibe-reports/2026-07-18T17-03-13Z/: spec.md  state.json  summary.md
examples/upsafe/.claude/vibe-reports/2026-07-18T17-09-56Z/: decisions.md  design.md  state.json  summary.md
examples/upsafe/.claude/vibe-reports/2026-07-18T17-30-16Z/: build-log.md  checklist.md  plan.md  state.json  summary.md  verification-plan.md
examples/upsafe/.claude/vibe-reports/2026-07-18T21-59-33Z/: findings.json  state.json  summary.md  verify-report.md
examples/upsafe/.claude/vibe-reports/2026-07-18T22-15-00Z/: findings.json  state.json  summary.md  verify-report.md
examples/upsafe/.claude/vibe-reports/2026-07-18T22-19-54Z/: findings.json  review.md  state.json  summary.md
examples/upsafe/.claude/vibe-reports/2026-07-18T22-37-04Z/: findings.json  state.json  summary.md  verify-report.md
examples/upsafe/.claude/vibe-reports/2026-07-18T22-37-56Z/: findings.json  review.md  state.json  summary.md
examples/upsafe/.claude/vibe-reports/2026-07-18T22-40-13Z/: env-report.md  state.json  summary.md
examples/upsafe/.claude/vibe-reports/2026-07-19T02-02-08Z/: findings.json  state.json  summary.md  verify-report.md
examples/upsafe/.claude/vibe-reports/2026-07-19T02-18-19Z/: findings.json  state.json  summary.md  verify-report.md
examples/upsafe/.claude/vibe-reports/2026-07-19T02-20-01Z/: findings.json  review.md  state.json  summary.md
examples/upsafe/src/upsafe/: __init__.py  __main__.py  app.py  auth.py  config.py  errors.py  logging.py  metadata.py  middleware.py  routes.py  storage.py  tokens.py  validation.py
examples/upsafe/tests/: test_auth.py  test_config.py  test_download.py  test_e2e_security.py  test_logging.py  test_metadata.py  test_middleware.py  test_storage.py  test_tokens.py  test_upload.py  test_validation.py
skills/vibe-coding/: SKILL.md
skills/vibe-coding/assets/profile-example/: preferences.md
skills/vibe-coding/assets/profile-example/assets/: .gitignore  .pre-commit-config.yaml
skills/vibe-coding/evals/: evals.json
skills/vibe-coding/references/: ci-recipe.md  design-principles.md  modes.md  python-stack.md  schemas.md  templates.md  worked-example.md
skills/vibe-coding/scripts/: new_run_dir.py  probe_subagents.py  read_profile.py
