[project]
name = "mdtoc"
version = "0.1.0"
description = "Inject and update a linked Markdown table of contents between <!-- toc --> markers."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mdtoc = "mdtoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdtoc"]

[tool.black]
line-length = 119
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = [
    # Conflict with Black's formatting; safe to ignore per Black's own guidance.
    "E203", # whitespace before ':'
    "W503", # line break before binary operator
]

[tool.pylint.main]
ignore-paths = ['(^|.*/)(tests|scripts|docs)/']

[tool.pylint.format]
max-line-length = 119

[tool.mypy]
python_version = "3.10"
strict = true
exclude = '^(tests|docs)/'

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "isort>=8.0.1",
    "markdown>=3.10.2",
    "mypy>=2.2.0",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
]
