[project]
name = "rebackoff"
version = "0.1.0"
description = "A tiny, dependency-free retry/backoff library: retry decorator and matching context manager, sync and async, with exponential backoff, jitter, per-exception predicates, and an overall deadline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Antonio Pisani", email = "antonio.pisani@gmail.com" }]
keywords = [
    "retry",
    "backoff",
    "jitter",
    "resilience",
    "exponential-backoff",
    "asyncio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/apisani1/rebackoff"
Repository = "https://github.com/apisani1/rebackoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebackoff"]

# --- Tooling below is the user preference profile base, preserved verbatim ---

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "flake8>=7.1.0",
    "flake8-pyproject>=1.2.0",
    "mypy>=1.15",
    "pylint>=3.3.0",
    "pytest>=7.4.4",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
force_single_line = false
multi_line_output = 3
force_grid_wrap = 2
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "FIRSTPARTY"
extend_skip = ["tests", "scripts", "docs"]

[tool.flake8]
max-line-length = 119
extend-ignore = [
    "E203", # whitespace before ':'
    "W503", # line break before binary operator
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "W605", # invalid escape sequence
]
exclude = ["tests", "scripts", "docs"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_ignores = false
exclude = '^(tests|scripts|docs)/'

[tool.pylint.main]
ignore-paths = ['(^|.*/)(tests|scripts|docs)/']

[tool.pylint.format]
max-line-length = 119

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["manual: tests that only run when explicitly targeted"]
addopts = "-m 'not manual'"
