[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upsafe"
version = "0.1.0"
description = "Security-first file-upload HTTP service: validated multipart uploads, quarantined storage under randomized names, and token-gated downloads."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Antonio Pisani", email = "antonio.pisani@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Pinned to the tested major: the upload 413-vs-400 mapping relies on Starlette's
    # multipart max_part_size behavior and MultiPartException messages (see routes.py).
    "starlette>=1.3.1,<2",
]

[project.scripts]
upsafe = "upsafe.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/upsafe"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "flake8>=7.1.0",
    "flake8-pyproject>=1.2.0",
    "mypy>=1.15",
    "types-pyyaml>=6.0.12.20250915",
    "pylint>=3.3.0",
    "pytest>=7.4.4",
    "httpx>=0.27",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
force_single_line = false
multi_line_output = 3
force_grid_wrap = 2
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "FIRSTPARTY"
extend_skip = ["tests", "scripts", "docs"]

[tool.flake8]
max-line-length = 119
extend-ignore = [
    "E203", # whitespace before ':'
    "W503", # line break before binary operator
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "W605", # invalid escape sequence
]
exclude = ["tests", "scripts", "docs"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_ignores = false
exclude = '^(tests|scripts|docs)/'

[tool.pylint.main]
ignore-paths = ['(^|.*/)(tests|scripts|docs)/']

[tool.pylint.format]
max-line-length = 119

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["manual: tests that only run when explicitly targeted"]
addopts = "-m 'not manual'"
